# askeladd

./: Cargo.toml
config/: default.toml
crates/core/src/: config.rs  types.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: cli_marketplace.rs  lib.rs  prover_marketplace.rs  prover_service.rs  verifier_service.rs
crates/marketplace/src/types/: marketplace.rs
crates/marketplace/src/utils/: business_handlers.rs  mod.rs  nostr_utils.rs  user_handlers.rs
crates/tests/: Cargo.toml
crates/tests/src/: e2e_test.rs
