[package]
name = "askeladd-marketplace"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askeladd-core = { path = "../core" }
# nostr-sdk = "0.32.0"
nostr-sdk = { git = "https://github.com/MSghais/nostr.git" }

tokio = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
config = "0.14.0"
dotenv = "0.15"
stwo-prover.workspace = true

[[bin]]
name = "marketplace"
path = "src/cli_marketplace.rs"

[[bin]]
name = "prover_marketplace"
path = "src/prover_marketplace.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
